Доделал REST логику сервиса уведомлений + исправил избранное Создал избранное, как сущность и немного переделал логику, связанную с ним Начал делать заготовки под консьюмеры и продьюсеры